# HierAMuS

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  DoxyConfig  LICENSE  README.md  datatypes.h.in  vtkCellType.h
FEMPythonPackage/: CMakeLists.txt  setup.py.linux  setup.py.win
HierAMuSEquationsSource/: CMakeLists.txt  DegreeOfFreedom.cpp  DegreeOfFreedom.h  EquationHandler.cpp  EquationHandler.h  GenericNodes.cpp  GenericNodes.h  MeshIdNodeList.cpp  MeshIdNodeList.h  NodeSet.cpp  NodeSet.h  NodeSetList.cpp  NodeSetList.h  NodeSetManager.cpp  NodeSetManager.h  NodeSetNodeList.cpp  NodeSetNodeList.h  NodeSetStorage.cpp  Nodetypes.cpp
HierAMuSFEMSource/: CMakeLists.txt  HelperFunctions.h  Timer.h  forwarddeclaration.h  licensedata.json  mainlib.cpp
HierAMuSFEMSource/Base/: CMakeLists.txt  FEMBase.cpp  FEMBase.h  FEMPython.cpp  FEMPython.h
HierAMuSFEMSource/cmake/: HierAMuS_FEMConfig.cmake
HierAMuSFEMSource/control/: BinaryWrite.h  CMakeLists.txt  FEMExceptions.h  HandlingStructs.cpp  HandlingStructs.h  OutputHandler.cpp  OutputHandler.h  ParameterList.cpp  ParameterList.h  licensedata.json  licensedata.json.license
HierAMuSFEMSource/controlProgram/: CMakeLists.txt  controlProgram.cpp  controlProgram.h
HierAMuSFEMSource/elementFormulations/: CMakeLists.txt  EL101_Bernoulli2D.cpp  EL101_Bernoulli2D.h  EL102_Timoshenko2D.cpp  EL102_Timoshenko2D.h  EL103_Timoshenko3D.cpp  EL103_Timoshenko3D.h  EL104_TimoshenkoPrism.cpp  EL104_TimoshenkoPrism.h  EL201_2DShell.cpp  EL201_2DShell.h  EL202_Piezo2D.cpp  EL202_Piezo2D.h  EL203_BeamInterface2D.cpp  EL203_BeamInterface2D.h  EL204_BeamInterface2D.cpp  EL204_BeamInterface2D.h  EL205_HDivTest.cpp  EL205_HDivTest.h  EL206_Plate.cpp  EL206_Plate.h  EL207_FaceConstraint.cpp  EL207_FaceConstraint.h  EL290_PythonElement.cpp  EL290_PythonElement.h  EL300_Solid3DLinear.cpp  EL300_Solid3DLinear.h  EL301_Piezo3DLinear.cpp  EL301_Piezo3DLinear.h  EL302_BeamCoupling3D.cpp  EL302_BeamCoupling3D.h  EL303_ThermoMechanikSolid3D.cpp  EL303_ThermoMechanikSolid3D.h  EL304_QPVolumeElement.cpp  EL304_QPVolumeElement.h  EL307_VolumeConstraint.cpp  EL307_VolumeConstraint.h  GenericElementFormulation.cpp  GenericElementFormulation.h  GenericElementFormulationInterface.h  (+4 more)
HierAMuSFEMSource/equations/: CMakeLists.txt  DegreeOfFreedom.cpp  DegreeOfFreedom.h  DofStatus.h  EquationHandler.cpp  EquationHandler.h  GenericNodes.cpp  GenericNodes.h  NodeSet.cpp  NodeSet.h  NodeSetStorage.h  Nodetypes.h
HierAMuSFEMSource/filehandling/: CMakeLists.txt  filehandling.cpp  filehandling.h
HierAMuSFEMSource/finiteElements/: CMakeLists.txt  Edge.cpp  Edge.h  ElementList.cpp  ElementList.h  ElementTypes.cpp  ElementTypes.h  Face.cpp  Face.h  FaceConstraint.cpp  FaceConstraint.h  GenericFiniteElement.cpp  GenericFiniteElement.h  GenericFiniteElementInterface.h  LinearPrism.cpp  LinearPrism.h  NormTypes.h  Volume.cpp  Volume.h  VolumeConstraint.cpp  VolumeConstraint.h  beamInterfaceElement2D.cpp  beamInterfaceElement2D.h  beamInterfaceElement3D.cpp  beamInterfaceElement3D.h
HierAMuSFEMSource/geometry/: Base.cpp  Base.h  BeamInterface2D.cpp  BeamInterface2D.h  BeamInterface3D.cpp  BeamInterface3D.h  CMakeLists.txt  Edges.cpp  Edges.h  Faces.cpp  Faces.h  GeometryData.cpp  GeometryData.h  LinearBrick.cpp  LinearBrick.h  LinearEdge.cpp  LinearEdge.h  LinearPrism.cpp  LinearPrism.h  LinearQuadrilateral.cpp  LinearQuadrilateral.h  LinearTriangle.cpp  LinearTriangle.h  QuadraticEdge.cpp  QuadraticEdge.h  QuadraticQuadrilateral.cpp  QuadraticQuadrilateral.h  ScaledBoundary2D.cpp  ScaledBoundary2D.h  Special.cpp  Special.h  Vertex.cpp  Vertex.h  Volumes.cpp  Volumes.h
HierAMuSFEMSource/indexLists/: rangedVector.h  rangedVectorIterator.h
HierAMuSFEMSource/loads/: CMakeLists.txt  DofLoad.h  GenericLoad.h  LoadList.cpp  LoadList.h  PropfunctionHandler.cpp  PropfunctionHandler.h  Timefunction.cpp  Timefunction.h
HierAMuSFEMSource/materials/: CMakeLists.txt  ElementformulationList.cpp  ElementformulationList.h  GenericMaterialFormulation.cpp  GenericMaterialFormulation.h  Material.cpp  Material.h  MaterialFormulation2.cpp  MaterialFormulation2.h  MaterialList.cpp  MaterialList.h  MaterialformulationList.cpp  MaterialformulationList.h
HierAMuSFEMSource/math/: CMakeLists.txt  EigenSparseOperations.h  MatrixOperations.cpp  MatrixOperations.h  Plane.cpp  Plane.h  geometry.h
HierAMuSFEMSource/plot/: CMakeLists.txt  plotControl.cpp  plotControl.h
HierAMuSFEMSource/pointercollection/: CMakeLists.txt  pointercollection.cpp  pointercollection.h
HierAMuSFEMSource/shapefunctions/: CMakeLists.txt  KernelShapes.cpp  KernelShapes.h  LagrangeShape.h  LegendreShapes.cpp  LegendreShapes.h  LobattoShapes.cpp  LobattoShapes.h  parser.py
HierAMuSFEMSource/solver/: CMakeLists.txt  EigenPardisoLDLT.cpp  EigenPardisoLDLT.h  EigenPardisoLLT.cpp  EigenPardisoLLT.h  EigenPardisoLU.cpp  EigenPardisoLU.h  EigenSimplicialLDLT.cpp  EigenSimplicialLDLT.h  EigenSimplicialLLT.cpp  EigenSimplicialLLT.h  EigenSparseLU.cpp  EigenSparseLU.h  EigenSparseQR.cpp  EigenSparseQR.h  GenericSolutionState.cpp  GenericSolutionState.h  GenericSolver.cpp  GenericSolver.h  SolutionTypes.h  SolverTypes.h  StaticSolutionState.cpp  StaticSolutionState.h  StaticSolutionStateHomogenization.cpp  StaticSolutionStateHomogenization.h  TransientSolution.h  TransientSolutionNewmark.cpp  TransientSolutionNewmark.h
HierAMuSGeometrySource/: CMakeLists.txt
HierAMuSGeometrySource/geometry/: CMakeLists.txt  GeometryBaseData.cpp  GeometryBaseData.h  GeometryBaseRuntime.cpp  GeometryBaseRuntime.h  GeometryData.cpp  GeometryData.h  GeometryShape.h  GeometryTypes.cpp  GeometryTypes.h  VertexData.cpp  VertexData.h  VertexRuntime.cpp  VertexRuntime.h
HierAMuSGeometrySource/math/: CMakeLists.txt  Plane.cpp  Plane.h
HierAMuSLoadSource/: CMakeLists.txt  LoadList.cpp  LoadList.h  PropfunctionHandler.cpp  PropfunctionHandler.h  Timefunction.cpp  Timefunction.h
HierAMuSPlotSource/: CMakeLists.txt  forwarddeclaration.h
Tests/: .gitignore
pybind/: .gitignore  main.cpp  pyproject.toml  setup.py.in
types/: CMakeLists.txt  MatrixTypes.h
(+444 files in other folders)
